# axum-dixous-admin-dixous-web

./: Cargo.toml  Dioxus.toml  compose.yaml  nginx.conf
crates/dioxus-i18n/: Cargo.toml
crates/dioxus-i18n/src/: lib.rs
crates/element-icons/: Cargo.toml
crates/route-guard/: Cargo.toml
crates/route-guard/src/: lib.rs
crates/slider-captcha/: Cargo.toml
crates/slider-captcha/src/: lib.rs
src/: app.rs  config.rs  http.rs  main.rs  storage.rs
src/api/: auth.rs  dictionary.rs  generator.rs  generator_history.rs  menu.rs  mod.rs  role.rs  sys_api.rs  user.rs
src/app/: mod.rs
src/components/: admin_layout.rs  api_manage.rs  dashboard.rs  dict_manage.rs  generator_history.rs  generator_manage.rs  layout.rs  login.rs  menu_item.rs  menu_manage.rs  mod.rs  profile.rs  role_manage.rs  settings.rs  user_dropdown.rs  user_manage.rs
src/config/: mod.rs
src/http/: mod.rs
src/i18n/: mod.rs
src/icons/: vdom.rs
src/icons/element/: arrow_down.rs  arrow_down_bold.rs  arrow_left.rs  arrow_left_bold.rs  arrow_right.rs  arrow_right_bold.rs  arrow_up.rs  arrow_up_bold.rs  bell.rs  bell_filled.rs  bottom.rs  bottom_left.rs  bottom_right.rs  box_icon.rs  calendar.rs  caret_bottom.rs  caret_left.rs  caret_right.rs  caret_top.rs  chat_dot_round.rs  chat_line_round.rs  check.rs  circle_check.rs  circle_check_filled.rs  circle_close.rs  circle_close_filled.rs  circle_plus.rs  circle_plus_filled.rs  clock.rs  close.rs  close_bold.rs  cloudy.rs  coin.rs  connection.rs  coordinate.rs  credit_card.rs  d_arrow_left.rs  d_arrow_right.rs  data_analysis.rs  data_board.rs  (+96 more)
src/models/: auth.rs  common.rs  dictionary.rs  generator.rs  generator_history.rs  menu.rs  mod.rs  role.rs  sys_api.rs  user.rs
src/router/: mod.rs
src/storage/: mod.rs
src/theme/: mod.rs
