[package]
name = "web"
version = "0.1.0"
authors = ["pauljohn21 <819820211@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-element-plug = "0.2.0"
route-guard = { path = "crates/route-guard" }
element-icons = { path = "crates/element-icons" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage", "Window", "MediaQueryList"] }
gloo-net = "0.7"
urlencoding = "2"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[workspace]
members = ["crates/route-guard", "crates/element-icons"]
