[package]
name = "web"
version = "0.1.0"
authors = ["pauljohn21 <819820211@qq.com>"]
edition = "2024"
rust-version = "1.96"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
dioxus-element-plug = "0.2.2"
route-guard = { path = "crates/route-guard" }
element-icons = { path = "crates/element-icons" }
dioxus-i18n = { path = "crates/dioxus-i18n" }
slider-captcha = { path = "crates/slider-captcha" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = ["Storage", "Window", "MediaQueryList", "Blob", "Url", "Document", "Element", "HtmlElement", "FileReader", "File", "FileList", "Event"] }
gloo-net = "0.7"
urlencoding = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[workspace]
members = ["crates/route-guard", "crates/element-icons", "crates/dioxus-i18n", "crates/slider-captcha"]

# 最小化 WASM 体积的 release profile
[profile.release]
opt-level = "z"      # 极致体积优化 (比 "s" 更小)
lto = true            # 链接时优化，消除跨 crate 死代码
codegen-units = 1     # 单代码生成单元，最大化优化效果
panic = "abort"       # 移除 panic unwinding 代码
strip = true          # 移除调试符号

