[package]
name = "slider-captcha"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"

[dependencies]
dioxus = { version = "0.7.1" }
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "EventListener", "Event", "MouseEvent"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
